objects/Activity.object
<CustomObject>
    <fields>
        <fullName>SSO_Revision_Type__c</fullName>
        <description>From SSO Revision Type updated to Revision Type field label, SSO task page decommissioned, need to remove SSO word to reuse the field.</description>
        <label>Revision Type</label>
        <picklist>
            <controllingField>Team__c</controllingField>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Site Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changed Eq. Pad Location – per cust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changed Eq. Pad Location – per PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changed Point of interconnection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Comment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error Corrections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Information from Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Site Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Structural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Engineering Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV and Product Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Size, PV, and Product change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Size and Product Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Size and PV change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Size Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text Modifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error Correction-Site Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error Correction-Design Rules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error Correction-Product Rules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error Correction-Optimization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error Correction-Drafting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site-New Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site-Post Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site-Post Structural</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SSO_Revision__c</fullName>
        <description>From SSO Revision updated to Revision Series field label, SSO task page decommissioned, need to remove SSO word to reuse the field.</description>
        <label>Revision Series</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SSO_Task_Accuracy__c</fullName>
        <description>From SSO Revision updated to Revision Series field label, SSO task page decommissioned, need to remove SSO word to reuse the field.</description>
        <label>Task Accuracy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SSO_Task_Category__c</fullName>
        <label>SSO Task Category</label>
        <picklist>
            <controllingField>Task_Type__c</controllingField>
            <picklistValues>
                <fullName>Commercial Rooftop Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General &amp; Administrative(For SSO Use Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground and Carport Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations &amp; Standards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTO(For SSO Use Only)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SSO_Task_Due_Date__c</fullName>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SSO_Task_Sub_Category__c</fullName>
        <label>SSO Task Sub-Category</label>
        <picklist>
            <controllingField>SSO_Task_Category__c</controllingField>
            <picklistValues>
                <fullName>BOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Rooftop Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC Wiring Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Manual &amp; Tools Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Object Creation / Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Service Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical 1 - Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground Mount /Carport Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metering &amp; Monitoring Schematic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Documentation / EPC Documentation Task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Improvements &amp; Standardization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Design ( Sheet Set)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Scheduling Tasks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal Design ( Array layout )</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV SIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revision / Drafting Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSO Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Downtime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainings</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SSO_Work_Week__c</fullName>
        <description>rom SSO Work Week updated to Work Week field label, SSO task page decommissioned, need to remove SSO word to reuse the field.</description>
        <label>Work Week</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Email_When_Task_Is_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Send Email When Task Is Completed</inlineHelpText>
        <label>Send Email When Task Is Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <description>To major the activity&apos;s severity</description>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>P1 - Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2 - Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3 - Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4 - Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specific_Ask__c</fullName>
        <label>Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Started_Date__c</fullName>
        <label>Started Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>System_Size_kWp__c</fullName>
        <label>System Size (kWp)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <label>Task Type</label>
        <picklist>
            <controllingField>Team__c</controllingField>
            <picklistValues>
                <fullName>Array Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feasibility Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSO RLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSO EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design &amp; Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering Task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering Service Request (ESR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimating</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tech_Support_Question_Category__c</fullName>
        <description>Category of the question.</description>
        <label>Tech Support Question Category</label>
        <picklist>
            <picklistValues>
                <fullName>Cells</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter Incident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laminate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mounting System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre - Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proactive Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS General Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS Troubleshooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Troubleshooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wired Monitor</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tech_Support_Question_Type__c</fullName>
        <label>Tech Support Question Type</label>
        <picklist>
            <controllingField>Tech_Support_Question_Category__c</controllingField>
            <picklistValues>
                <fullName>Cells – Cosmetic Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cells – Cracked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cells -  Edge Chips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cells – Electrical Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cells – Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cells – Plating Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cells – Shipping Damaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVAR - Array Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVAR - Ballast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVAR - Bill of Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVAR - Combiner Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVAR - Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVAR - Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVAR - Inverter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVAR - LG Specs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVAR - others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVAR - PG Specs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVAR - PV Fast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVAR - PV Sim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVAR - Securement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVAR - Site Audit Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVAR - T10 Specs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVAR - T5 Specs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVAR - Testing Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVAR - Windload Calculation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter - Output</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter - Positive Grounding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter - SPECS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter - Start-up Sequence</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tech_Support_Sub_Issue__c</fullName>
        <label>Tech Support Sub-Issue</label>
        <picklist>
            <picklistValues>
                <fullName>Antenna Orientation Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Binding Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken Glass Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabling Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Component Configuration Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credential Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damage During Shipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Database Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Web UI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display Inconsistent Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display in Test Mode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display No Backlight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display Out Of Range</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DL Out of Range</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DL Power LED Frozen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Down SunPower Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faulty Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faulty DL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faulty GW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faulty Power Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firmware Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW LAN Port Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW Power LED Frozen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HO Web UI Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interference Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Incompatibility Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Log-On Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mislabeled Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Parts</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Remaining__c</fullName>
        <formula>TEXT(Complete__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Remaining</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Remaining_for_Task_hrs__c</fullName>
        <formula>(Time_Required__c)*(1 -  VALUE(Time_Remaining__c)/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Remaining for Task (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Required_Per_Weeks_Remaining__c</fullName>
        <formula>(Time_Remaining_for_Task_hrs__c)/((Tracking_Date__c - TODAY ())/7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time per week required to complete task between Today&apos;s Date and Tracking Date.</inlineHelpText>
        <label>Time (hr) Required Per Weeks Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Required__c</fullName>
        <label>Estimated Time (hrs)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_hr_Required_Per_Weeks__c</fullName>
        <formula>(Time_Required__c)  / ((Tracking_Date__c -  Started_Date__c)/7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time per week required to complete task between Started Date and Tracking Date.</inlineHelpText>
        <label>Time (hr) Required Per Week</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_BOS_Cost__c</fullName>
        <label>Total BOS Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tracking_Date__c</fullName>
        <label>Tracking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Concern_Status__c</fullName>
        <description>Training Concern Status</description>
        <label>Training Concern Status</label>
        <picklist>
            <picklistValues>
                <fullName>Catalog Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPF Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeded Maximum Enrollees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experienced Solar Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR Connector Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LMS Function Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portal Champion Task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirements Not Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopping Cart Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unusual/Escalated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_Concern__c</fullName>
        <description>Training Concern</description>
        <label>Training Concern</label>
        <picklist>
            <picklistValues>
                <fullName>Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Launching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curriculum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Out Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Force Licence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mac Users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Curriculum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LMS Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Benchmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substitution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_Question_Category__c</fullName>
        <description>Training Question Category</description>
        <label>Training Question Category</label>
        <picklist>
            <picklistValues>
                <fullName>Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instructor Led Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Lesson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>